Ajustes no swagger e implementação da função de login
