# swagger.yaml
@@ -7,6 +7,38 @@ servers:
   - url: http://localhost:3000
     description: Servidor local
 paths:
+
+  /ondetem/usuarios/login:
+    post:
+      summary: Faz login do usuário
+      tags:
+        - Usuários
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                senha:
+                  type: string
+      responses:
+        '200':
+          description: Login realizado com sucesso.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+        '400':
+          description: Email e senha são obrigatórios.
+        '500':
+          description: Erro ao realizar login.
+
   /ondetem/usuarios:
     post:
       summary: Cria um novo usuário
@@ -89,6 +121,46 @@ paths:
           description: Usuário não encontrado.
         '500':
           description: Erro ao deletar usuário.
+    
+    patch:
+      summary: Atualiza a senha de um usuário
+      tags:
+        - Usuários
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID do usuário
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                senha:
+                  type: string
+      responses:
+        '200':
+          description: Senha atualizada com sucesso.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  username:
+                    type: string
+                  senha:
+                    type: string
+        '404':
+          description: Usuário não encontrado.
+        '500':
+          description: Erro ao atualizar senha.
+
 
   /ondetem/usuarios/{usuarioId}/favoritos/{estabId}:
     post:
@@ -386,6 +458,60 @@ paths:
           in: path
           required: true
           description: ID do estabelecimento
+  
+  /ondetem/estabelecimentos/busca:
+    post:
+      summary: Busca estabelecimentos por cidade e tags secundárias
+      tags:
+        - Estabelecimentos
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                cidade:
+                  type: string
+                tagsSecundarias:
+                  type: array
+                  items:
+                    type: string
+      responses:
+        '200':
+          description: Busca bem sucedida.
+          content:
+            application/json:
+              schema:
+                type: string
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    nome:
+                      type: string
+                    cidade:
+                      type: string
+                    bairro:
+                      type: string
+                    rua:
+                      type: string
+                    numero:
+                      type: string
+                    descricao:
+                      type: string
+                    imagens:
+                      type: array
+                    items:
+                      type: string
+                    tagP:
+                      type: string
+        '400':
+          description: Parâmetros de busca inválidos.
+        '500':
+          description: Erro ao encontrar estabelecimentos.
+
 
   /ondetem/tags_primarias:
     post:
